--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -222,6 +222,11 @@
 </head>
 
 <body>
+  {% extends "base.html" %}
+
+{% block title %}Appointments | MediCare{% endblock %}
+
+{% block content %}
 
 <!-- Topbar -->
 <nav class="navbar topbar">
@@ -407,5 +412,6 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+{% endblock %}
 </body>
 </html>
