--- a/templates/doctor_appointments.html
+++ b/templates/doctor_appointments.html
@@ -4,6 +4,11 @@
   <title>Doctor Appointments</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+{% extends "base.html" %}
+
+{% block title %}Appointments | MediCare{% endblock %}
+
+{% block content %}
 
 <body class="bg-light">
 
@@ -83,6 +88,7 @@
     </div>
   </div>
 </div>
+{% endblock %}
 
 </body>
 </html>
