--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+
+{% block title %}Home | MediCare{% endblock %}
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -184,7 +188,7 @@
 
 <body>
 
-<!-- ================= NAVBAR ================= -->
+{% comment %} <!-- ================= NAVBAR ================= -->
 
 <nav class="navbar navbar-expand-lg nav-glass sticky-top">
   <div class="container">
@@ -233,9 +237,14 @@
 
     </div>
   </div>
-</nav>
+</nav> {% endcomment %}
 
 <!-- ================= HERO ================= -->
+
+
+
+
+{% block content %}
 
 <section class="hero">
   <div class="container text-center">
@@ -528,8 +537,9 @@
     </div>
   </div>
 </section>
+{% endblock %}
 
-<!-- ================= FOOTER ================= -->
+{% comment %} <!-- ================= FOOTER ================= -->
 <footer>
   <div class="container">
     <div class="row g-4">
@@ -580,6 +590,6 @@
 </footer>
 
 <!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> {% endcomment %}
 </body>
 </html>
