--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,36 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-	 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+{% load static %}
 
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
-</head>
-
-<style>
-
-
-</style>
-
-
-<body>
-	<nav class="navbar navbar-expand-lg nav-glass sticky-top">
+<nav class="navbar navbar-expand-lg nav-glass sticky-top">
   <div class="container">
     <a class="navbar-brand fw-bold d-flex align-items-center" href="{% url 'home' %}">
       <span class="brand-badge"><i class="bi bi-heart-pulse"></i></span>
       MediCare
     </a>
 
-    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarNav">
-
-     
       <ul class="navbar-nav mx-auto gap-lg-3">
         <li class="nav-item"><a class="nav-link" href="#features">Features</a></li>
         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
@@ -38,7 +19,6 @@
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
       </ul>
 
-   
       <ul class="navbar-nav ms-auto align-items-lg-center gap-2">
         {% if logged_user %}
           <li class="nav-item dropdown">
@@ -61,10 +41,6 @@
           </li>
         {% endif %}
       </ul>
-
     </div>
   </div>
 </nav>
-	
-</body>
-</html>
