--- a/templates/track_token.html
+++ b/templates/track_token.html
@@ -1,3 +1,9 @@
+{% extends "base.html" %}
+
+{% block title %}Appointments | MediCare{% endblock %}
+
+{% block content %}
+
 <div class="card shadow p-4">
 
   <h4>Doctor: {{ doctor.name }}</h4>
@@ -44,3 +50,4 @@
   </div>
 
 </div>
+{% endblock %}
